--- a/neumorphism/itwillrock_mobile_ui/pubspec.yaml
+++ b/neumorphism/itwillrock_mobile_ui/pubspec.yaml
@@ -1,4 +1,4 @@
-name: itwillrock_mobile_ui
+name: itwillrock_neumorphism
 description: Neumorphic controls and controls environment implementation. 
 version: 0.0.6
 homepage: https://github.com/coredeveloper/itwillrock_ui/tree/main/neumorphism/itwillrock_mobile_ui
