--- a/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
+++ b/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  itwillrock_mobile_ui:
+  itwillrock_neumorphism:
     path: ../
 
 dev_dependencies:
