Fixes according to the latest language standards and few minor upgrades

--- a/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
+++ b/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
@@ -48,9 +48,5 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
+  uses-material-design: false
 
