Readme and samples updated

--- a/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
+++ b/neumorphism/itwillrock_mobile_ui/example/pubspec.yaml
@@ -48,5 +48,5 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  uses-material-design: false
+  uses-material-design: true
 
