--- a/neumorphism/itwillrock_mobile_ui/pubspec.yaml
+++ b/neumorphism/itwillrock_mobile_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: itwillrock_neumorphism
 description: Neumorphic controls and controls environment implementation. 
-version: 0.0.33
+version: 0.0.34
 homepage: https://github.com/coredeveloper/itwillrock_ui/tree/main/neumorphism/itwillrock_mobile_ui
 repository: https://github.com/coredeveloper/itwillrock_ui/tree/main/neumorphism/itwillrock_mobile_ui
 screenshots:
@@ -18,4 +18,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 
+  lints: ^5.1.1
 flutter:
